--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,118 +1,74 @@
 
-.editform{
-  display: none;
+
+@font-face {
+  font-family: Cyber;
+  src: url("https://assets.codepen.io/605876/Blender-Pro-Bold.otf");
+  font-display: swap;
+}
+button.add-bug{
+  cursor:pointer;
+  top:10;
+  right: 20;
+}
+/* Buttons Section  working*/
+button.logout{
+  font-family: Cyber;
+  margin-top: 10px;
+  margin-right: 20px;
+  position:absolute;
+  top:0;
+  right:0;
+  font-weight: bold;
+  font-size: 1em;
+  letter-spacing: 0.1em;
+  text-decoration: none;
+  color: #4472c7;
+  display: inline-block;
+  padding: 10px 40px 10px 40px;
+  border: 3px solid #e23d3d;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
-.show{
-display:block;
-}
-
-.trigger:hover{
-background-color: green;
-}
-
-
-
-.addpost:hover{
-background: green;
-}
-
-.trigger{
-display:inline-block;
-padding:0.7em 1.4em;
-margin:0 0.3em 0.3em 0;
-border-radius:0.15em;
-box-sizing: border-box;
-text-decoration:none;
-font-family:'Roboto',sans-serif;
-text-transform:uppercase;
-font-weight:400;
-color:#FFFFFF;
-background-color:#3369ff;
-box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
-text-align:center;
-position:relative;
-}
-
-
-
-
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900);
-
-body{
-background-image: url("..//images/404DOCS.jpg");
-background-repeat: no-repeat;
- background-position: center; 
-background-size: cover;
-font-family: Lato;
-background-color: #FFFFFF;
-color: black;
-}
-
-.header{
-
-  margin: 0;
-  font-size: 3rem;
-  white-space: nowrap;
-  color:white;
+h1{
+  font-family: Cyber;
+  font-size: 100px;
+  color: #fff;
   text-align: center;
-  font-family: 'Lato', sans-serif;
+  margin-top: 50px;
+ 
 }
-p {
-  margin: 0;
-  font-size: 1.5rem;
+section.header{
+  background-color: #6b74f5;
+  height: 10vh;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
-div.background {
-background: url(klematis.jpg) repeat;
-border: 2px solid black;
+body {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 100vh;
+  font-family: 'Cyber', sans-serif;
+  background: linear-gradient(90deg, #f5ed00 70%, #aaa75d 70%), #202013;
 }
-
-div.transbox {
-margin: 30px;
-background-color: #ffffff;
-border: 1px solid black;
-opacity: 0.6;
-}
-
-div.transbox p {
-margin: 5%;
-font-weight: bold;
-color: #000000;
-}
-.topnav {
-  background-color: #333;
-  overflow: hidden;
-}
-
-.topnav .trigger {
-  float: right;
-}
-.topnav .trigger{
-display: block;
-color: #f2f2f2;
-text-align: center;
-padding: 14px 16px;
-text-decoration: none;
-font-size: 17px;
- float: none;
-  position: absolute;
-  top: 5%;
-  left: 95%;
-  transform: translate(-50%, -50%);
-
-}
-.posts{
-color:white;
-}
-
-li{
-  font-size: 20px;
-  font-family: Lato;
-  font-weight:300;
-  color:
 
 
 
-
+span.card-title {
+  position: relative;
+  display: inline-block;
+  max-width: 1000px;
+  min-width: 1000px;
+  box-sizing: border-box;
+  padding: 30px 25px;
+  background-color: white;
+  border-radius: 40px;
+  margin: 40px 0;
 }
+
+  
