--- a/views/user.ejs
+++ b/views/user.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel='stylesheet' href='/stylesheets/style.css' />
+   <link rel="stylesheet" href="/stylesheets/style.css" />
    <link rel="stylesheet" >
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     
@@ -12,16 +12,18 @@
 </head>
 <body>
         <!-- Add login UI here -->
-       
+      <ul>
           <li>
+          <button>
+                <div>
           <% if (user) { %>
             <a href="/logout"><i class="material-icons left">trending_flat</i>Log Out</a>
           <% } else { %>
             <a href="/auth/google"><i class="material-icons left">vpn_key</i>Login with Google</a>
           <% } %>
+        </div>
+            </button>
           </li>
-        </button>
-        </ul>
-      </div>
+          </ul>
 </body>
 </html>
